hardcode some critter animation stuff + unfinished scripts

--- a/visualize.html
+++ b/visualize.html
@@ -4,7 +4,7 @@
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script>
-var MAP_NAME = "derp_walls2"
+var MAP_NAME = "SFChina"
 var matrix = null
 var gObjects = []
 var size = 6
@@ -13,8 +13,45 @@ var tile_height = 36
 var images = {}
 var imageOffsets = {}
 var cameraX = 3490
-var cameraY = 1200
+var cameraY = 1365//1200
 var showHexOverlay = false
+
+var critterOffsets = {
+	"art/critters/nmwarraa": [{"x": 0, "w": 29, "h": 63}, {"x": 29, "w": 29, "h": 63}, {"x": 58, "w": 26, "h": 63}, {"x": 84, "w": 26, "h": 65}, {"x": 110, "w": 26, "h": 64}, {"x": 136, "w": 26, "h": 65}, {"x": 162, "w": 26, "h": 64}, {"x": 188, "w": 26, "h": 65}, {"x": 214, "w": 26, "h": 64}, {"x": 240, "w": 26, "h": 65}, {"x": 266, "w": 26, "h":
+69}, {"x": 292, "w": 26, "h": 63}, {"x": 318, "w": 13, "h": 66}, {"x": 331, "w": 13, "h": 66}, {"x": 344, "w": 28, "h": 66}, {"x": 372, "w": 19, "h": 67}, {"x": 391, "w": 19, "h": 67}, {"x": 410, "w": 19, "h": 67}, {"x": 429, "w": 19, "h": 67}, {"x": 448, "w": 19, "h": 67}, {"x": 467, "w": 19, "h": 67}, {"x": 486, "w":
+19, "h": 67}, {"x": 505, "w": 23, "h": 67}, {"x": 528, "w": 14, "h": 66}, {"x": 542, "w": 28, "h": 64}, {"x": 570, "w": 28, "h": 64}, {"x": 598, "w": 35, "h": 64}, {"x": 633, "w": 31, "h": 64}, {"x": 664, "w": 31,
+"h": 65}, {"x": 695, "w": 30, "h": 65}, {"x": 725, "w": 31, "h": 65}, {"x": 756, "w": 31, "h": 64}, {"x": 787, "w": 31, "h": 65}, {"x": 818, "w": 30, "h": 65}, {"x": 848, "w": 31, "h": 64}, {"x": 879, "w": 28, "h": 64}, {"x": 907, "w": 29, "h": 64}, {"x": 936, "w": 29, "h": 64}, {"x": 965, "w": 26, "h": 64}, {"x": 991,
+"w": 26, "h": 64}, {"x": 1017, "w": 26, "h": 64}, {"x": 1043, "w": 26, "h": 64}, {"x": 1069, "w": 26, "h":
+64}, {"x": 1095, "w": 26, "h": 64}, {"x": 1121, "w": 26, "h": 64}, {"x": 1147, "w": 26, "h": 64}, {"x": 1173, "w": 26, "h": 64}, {"x": 1199, "w": 29, "h": 64}, {"x": 1228, "w": 14, "h": 66}, {"x": 1242, "w": 14, "h": 66}, {"x": 1256, "w": 28, "h": 66}, {"x": 1284, "w": 20, "h": 66}, {"x": 1304, "w": 20, "h": 66}, {"x":
+1324, "w": 19, "h": 66}, {"x": 1343, "w": 20, "h": 66}, {"x": 1363, "w": 20, "h": 66}, {"x": 1383, "w": 20, "h": 66}, {"x": 1403, "w": 19, "h": 66}, {"x": 1422, "w": 24, "h": 66}, {"x": 1446, "w": 14, "h": 66}, {"x": 1460, "w": 28, "h": 63}, {"x": 1488, "w": 28, "h": 63}, {"x": 1516, "w": 36, "h": 63}, {"x": 1552, "w":
+32, "h": 64}, {"x": 1584, "w": 32, "h": 63}, {"x": 1616, "w": 31, "h": 63}, {"x": 1647, "w": 31, "h": 63},
+{"x": 1678, "w": 32, "h": 64}, {"x": 1710, "w": 31, "h": 63}, {"x": 1741, "w": 31, "h": 63}, {"x": 1772, "w": 32, "h": 68}, {"x": 1804, "w": 28, "h": 63}],
+
+	 "art/critters/nmrgngaa": [{"x": 0, "w": 23, "h": 59}, {"x": 23, "w": 21, "h": 59}, {"x": 44, "w": 21, "h": 59}, {"x": 65, "w": 20, "h": 61}, {"x": 85, "w": 21, "h": 60}, {"x": 106, "w": 21, "h": 60}, {"x": 127, "w": 21, "h": 60}, {"x": 148, "w": 21, "h": 61}, {"x": 169, "w": 21, "h": 62}, {"x": 190, "w": 21, "h": 59}, {"x": 211, "w": 21, "h": 59}, {"x": 232, "w": 23, "h": 59}, {"x": 255, "w": 13, "h": 60}, {"x": 268, "w": 21, "h": 60}, {"x": 289, "w": 25, "h": 60}, {"x": 314, "w": 18, "h": 60}, {"x": 332, "w": 16, "h": 60}, {"x": 348, "w": 16, "h": 60},
+{"x": 364, "w": 16, "h": 60}, {"x": 380, "w": 16, "h": 61}, {"x": 396, "w": 19, "h": 60}, {"x": 415, "w": 26, "h": 60}, {"x": 441, "w": 22, "h": 60}, {"x": 463, "w": 13, "h": 60}, {"x": 476, "w": 22, "h": 60}, {"x": 498, "w": 24, "h": 60}, {"x": 522, "w": 24, "h": 60}, {"x": 546, "w": 24, "h": 59}, {"x": 570, "w": 24, "h": 59}, {"x": 594, "w": 24, "h": 60}, {"x": 618, "w": 25, "h": 59}, {"x": 643, "w": 25, "h": 59}, {"x": 668, "w": 25, "h": 59}, {"x": 693, "w": 26, "h": 59}, {"x": 719, "w": 27, "h": 60}, {"x": 746, "w": 22, "h":
+60}, {"x": 768, "w": 23, "h": 60}, {"x": 791, "w": 21, "h": 60}, {"x": 812, "w": 21, "h": 60}, {"x": 833, "w": 21, "h": 60}, {"x": 854, "w": 21, "h": 60}, {"x": 875, "w": 21, "h": 60}, {"x": 896, "w": 21, "h": 60}, {"x": 917, "w": 21, "h": 60}, {"x": 938, "w": 21, "h": 60}, {"x": 959, "w": 21, "h": 60}, {"x": 980, "w":
+21, "h": 60}, {"x": 1001, "w": 23, "h": 60}, {"x": 1024, "w": 13, "h": 60}, {"x": 1037, "w": 21, "h": 60},
+{"x": 1058, "w": 25, "h": 60}, {"x": 1083, "w": 18, "h": 60}, {"x": 1101, "w": 16, "h": 60}, {"x": 1117, "w": 16, "h": 60}, {"x": 1133, "w": 15, "h": 60}, {"x": 1148, "w": 15, "h": 60}, {"x": 1163, "w": 18, "h": 60}, {"x": 1181, "w": 26, "h": 60}, {"x": 1207, "w": 22, "h": 60}, {"x": 1229, "w": 13, "h": 60}, {"x": 1242, "w": 22, "h": 59}, {"x": 1264, "w": 24, "h": 59}, {"x": 1288, "w": 25, "h": 59}, {"x": 1313, "w": 24, "h": 62}, {"x": 1337, "w": 24, "h": 60}, {"x": 1361, "w": 24, "h": 60}, {"x": 1385, "w": 25, "h": 60}, {"x": 1410, "w": 25, "h": 60}, {"x": 1435, "w": 25, "h": 62}, {"x": 1460, "w": 26, "h": 59}, {"x": 1486, "w": 26, "h": 59}, {"x": 1512, "w": 22, "h": 59}],
+
+	"art/critters/nmasiaaa": [{"x": 0, "w": 23, "h": 59}, {"x": 23, "w": 20, "h": 59}, {"x": 43, "w": 20, "h": 59}, {"x": 63, "w": 19, "h": 61}, {"x": 82, "w": 20, "h": 60}, {"x": 102, "w": 20, "h": 60}, {"x": 122, "w": 20, "h": 60}, {"x": 142, "w": 20, "h": 61}, {"x": 162, "w": 20, "h": 62}, {"x": 182, "w": 20, "h": 59}, {"x": 202, "w": 21, "h": 59}, {"x": 223, "w": 23, "h": 59}, {"x": 246, "w": 11, "h": 59}, {"x": 257, "w": 20, "h": 59}, {"x": 277, "w": 24, "h": 59}, {"x": 301, "w": 17, "h": 59}, {"x": 318, "w": 16, "h": 60}, {"x": 334, "w": 15, "h": 60},
+{"x": 349, "w": 15, "h": 60}, {"x": 364, "w": 15, "h": 61}, {"x": 379, "w": 18, "h": 59}, {"x": 397, "w": 25, "h": 59}, {"x": 422, "w": 21, "h": 59}, {"x": 443, "w": 11, "h": 59}, {"x": 454, "w": 23, "h": 59}, {"x": 477, "w": 24, "h": 59}, {"x": 501, "w": 24, "h": 59}, {"x": 525, "w": 24, "h": 59}, {"x": 549, "w": 24, "h": 59}, {"x": 573, "w": 25, "h": 60}, {"x": 598, "w": 26, "h": 59}, {"x": 624, "w": 26, "h": 59}, {"x": 650, "w": 27, "h": 59}, {"x": 677, "w": 27, "h": 59}, {"x": 704, "w": 28, "h": 59}, {"x": 732, "w": 23, "h":
+59}, {"x": 755, "w": 23, "h": 59}, {"x": 778, "w": 20, "h": 59}, {"x": 798, "w": 20, "h": 59}, {"x": 818, "w": 20, "h": 59}, {"x": 838, "w": 20, "h": 59}, {"x": 858, "w": 20, "h": 59}, {"x": 878, "w": 20, "h": 59}, {"x": 898, "w": 20, "h": 59}, {"x": 918, "w": 20, "h": 59}, {"x": 938, "w": 20, "h": 59}, {"x": 958, "w":
+21, "h": 59}, {"x": 979, "w": 23, "h": 59}, {"x": 1002, "w": 11, "h": 59}, {"x": 1013, "w": 20, "h": 59}, {"x": 1033, "w": 24, "h": 59}, {"x": 1057, "w": 17, "h": 60}, {"x": 1074, "w": 16, "h": 60}, {"x": 1090, "w": 16, "h": 60}, {"x": 1106, "w": 15, "h": 60}, {"x": 1121, "w": 15, "h": 60}, {"x": 1136, "w": 18, "h": 59}, {"x": 1154, "w": 25, "h": 59}, {"x": 1179, "w": 21, "h": 59}, {"x": 1200, "w": 11, "h": 59}, {"x": 1211,
+"w": 22, "h": 59}, {"x": 1233, "w": 24, "h": 59}, {"x": 1257, "w": 24, "h": 59}, {"x": 1281, "w": 24, "h":
+62}, {"x": 1305, "w": 24, "h": 60}, {"x": 1329, "w": 24, "h": 60}, {"x": 1353, "w": 25, "h": 60}, {"x": 1378, "w": 25, "h": 60}, {"x": 1403, "w": 26, "h": 62}, {"x": 1429, "w": 26, "h": 59}, {"x": 1455, "w": 26, "h": 59}, {"x": 1481, "w": 22, "h": 59}],
+
+	"art/critters/nfasiaaa": 
+[{"x": 0, "w": 19, "h": 59}, {"x": 19, "w": 19, "h": 59}, {"x": 38, "w": 21, "h": 59}, {"x": 59, "w": 22, "h": 59}, {"x": 81, "w": 24, "h": 59}, {"x": 105, "w": 24, "h": 59}, {"x": 129, "w": 23, "h": 59}, {"x": 152, "w": 23, "h": 59}, {"x": 175, "w": 23, "h": 58}, {"x": 198, "w": 23, "h": 58}, {"x": 221, "w": 23, "h": 58}, {"x": 244, "w": 24, "h": 59}, {"x": 268, "w": 25, "h": 59}, {"x": 293, "w": 26, "h": 58}, {"x": 319, "w": 26, "h": 58}, {"x": 345, "w": 26, "h": 58}, {"x": 371, "w": 27, "h": 59}, {"x": 398, "w": 26, "h": 59},
+{"x": 424, "w": 25, "h": 59}, {"x": 449, "w": 24, "h": 59}, {"x": 473, "w": 22, "h": 59}, {"x": 495, "w": 21, "h": 59}, {"x": 516, "w": 20, "h": 59}, {"x": 536, "w": 19, "h": 59}, {"x": 555, "w": 19, "h": 59}, {"x": 574, "w": 12, "h": 59}, {"x": 586, "w": 12, "h": 59}, {"x": 598, "w": 13, "h": 59}, {"x": 611, "w": 14, "h": 59}, {"x": 625, "w": 13, "h": 59}, {"x": 638, "w": 13, "h": 59}, {"x": 651, "w": 14, "h": 59}, {"x": 665, "w": 15, "h": 59}, {"x": 680, "w": 16, "h": 59}, {"x": 696, "w": 15, "h": 59}, {"x": 711, "w": 14, "h":
+59}, {"x": 725, "w": 14, "h": 59}, {"x": 739, "w": 16, "h": 59}, {"x": 755, "w": 18, "h": 59}, {"x": 773, "w": 18, "h": 59}, {"x": 791, "w": 18, "h": 59}, {"x": 809, "w": 17, "h": 59}, {"x": 826, "w": 16, "h": 59}, {"x": 842, "w": 14, "h": 59}, {"x": 856, "w": 13, "h": 59}, {"x": 869, "w": 14, "h": 59}, {"x": 883, "w":
+13, "h": 59}, {"x": 896, "w": 13, "h": 59}, {"x": 909, "w": 13, "h": 59}, {"x": 922, "w": 12, "h": 59}, {"x": 934, "w": 19, "h": 59}, {"x": 953, "w": 20, "h": 59}, {"x": 973, "w": 22, "h": 59}, {"x": 995, "w": 22,
+"h": 59}, {"x": 1017, "w": 22, "h": 59}, {"x": 1039, "w": 23, "h": 59}, {"x": 1062, "w": 24, "h": 59}, {"x": 1086, "w": 25, "h": 59}, {"x": 1111, "w": 25, "h": 59}, {"x": 1136, "w": 25, "h": 59}, {"x": 1161, "w": 24, "h": 59}, {"x": 1185, "w": 22, "h": 59}, {"x": 1207, "w": 21, "h": 59}, {"x": 1228, "w": 20, "h": 59}, {"x": 1248, "w": 19, "h": 59}, {"x": 1267, "w": 19, "h": 59}, {"x": 1286, "w": 20, "h": 59}, {"x": 1306, "w": 22, "h": 59}, {"x": 1328, "w": 22, "h": 59}, {"x": 1350, "w": 22, "h": 59}, {"x": 1372, "w": 22, "h": 59}, {"x": 1394, "w": 22, "h": 59}, {"x": 1416, "w": 22, "h": 59}, {"x": 1438, "w": 20, "h": 59}, {"x": 1458,
+"w": 19, "h": 59}, {"x": 1477, "w": 19, "h": 59}, {"x": 1496, "w": 20, "h": 59}, {"x": 1516, "w": 20, "h":
+59}, {"x": 1536, "w": 22, "h": 59}, {"x": 1558, "w": 24, "h": 59}, {"x": 1582, "w": 24, "h": 59}, {"x": 1606, "w": 24, "h": 59}, {"x": 1630, "w": 24, "h": 59}, {"x": 1654, "w": 23, "h": 59}, {"x": 1677, "w": 23, "h": 59}, {"x": 1700, "w": 23, "h": 59}, {"x": 1723, "w": 24, "h": 59}, {"x": 1747, "w": 25, "h": 59}, {"x":
+1772, "w": 27, "h": 59}, {"x": 1799, "w": 26, "h": 59}, {"x": 1825, "w": 26, "h": 59}, {"x": 1851, "w": 26, "h": 59}, {"x": 1877, "w": 26, "h": 59}, {"x": 1903, "w": 25, "h": 59}, {"x": 1928, "w": 24, "h": 59}, {"x": 1952, "w": 23, "h": 59}, {"x": 1975, "w": 21, "h": 59}, {"x": 1996, "w": 20, "h": 59}, {"x": 2016, "w":
+19, "h": 59}, {"x": 2035, "w": 19, "h": 59}, {"x": 2054, "w": 12, "h": 59}, {"x": 2066, "w": 13, "h": 59},
+{"x": 2079, "w": 13, "h": 59}, {"x": 2092, "w": 14, "h": 58}, {"x": 2106, "w": 14, "h": 58}, {"x": 2120, "w": 14, "h": 58}, {"x": 2134, "w": 14, "h": 58}, {"x": 2148, "w": 15, "h": 58}, {"x": 2163, "w": 15, "h": 58}, {"x": 2178, "w": 15, "h": 58}, {"x": 2193, "w": 14, "h": 58}, {"x": 2207, "w": 14, "h": 58}, {"x": 2221, "w": 17, "h": 58}, {"x": 2238, "w": 18, "h": 58}, {"x": 2256, "w": 18, "h": 58}, {"x": 2274, "w": 18, "h": 58}, {"x": 2292, "w": 17, "h": 58}, {"x": 2309, "w": 16, "h": 58}, {"x": 2325, "w": 15, "h": 58}, {"x": 2340, "w": 14, "h": 58}, {"x": 2354, "w": 14, "h": 58}, {"x": 2368, "w": 13, "h": 59}, {"x": 2381, "w": 13, "h": 59}, {"x": 2394, "w": 13, "h": 59}, {"x": 2407, "w": 12, "h": 59}, {"x": 2419, "w": 19, "h": 59}, {"x": 2438, "w": 20, "h": 59}, {"x": 2458, "w": 21, "h": 59}, {"x": 2479, "w": 22, "h": 58}, {"x": 2501, "w": 22, "h": 58}, {"x": 2523, "w": 23, "h": 58}, {"x": 2546, "w": 24, "h": 58}, {"x": 2570, "w": 24, "h": 58}, {"x": 2594, "w": 25, "h": 58}, {"x": 2619, "w": 24, "h": 58}, {"x": 2643, "w": 24, "h": 58}, {"x": 2667, "w": 22, "h": 58}, {"x": 2689, "w": 22, "h": 58}, {"x": 2711, "w": 20, "h": 58}, {"x": 2731, "w": 19, "h": 58}, {"x": 2750, "w": 20, "h": 58}, {"x": 2770, "w": 20, "h": 58}, {"x": 2790, "w": 22, "h": 58}, {"x": 2812, "w": 22, "h": 58}, {"x": 2834, "w": 22, "h": 58}, {"x": 2856, "w": 22, "h": 58}, {"x": 2878, "w": 22, "h": 58}, {"x": 2900, "w": 21, "h": 59}, {"x": 2921, "w": 21, "h": 59}, {"x": 2942, "w": 19, "h": 59}]
+}
 
 function tileToScreen(x, y) {
 	x = 99 - x // this algorithm expects x to be reversed
@@ -235,10 +272,24 @@ heart.draw = function() {
 			offsetY -= imageOffsets[obj.art].y;
 		}
 
-		heart.graphics.draw(images[obj.art], scr.x - offsetX - cameraX, scr.y - offsetY - cameraY)
+		if(obj.art in critterOffsets) {
+			var off = critterOffsets[obj.art]
+			var framesPerDir = (obj.art === "art/critters/nfasiaaa") ? 25 : 12
+			var frame = off[obj.orientation*framesPerDir]
+			offsetX = Math.floor(frame.w / 2) - imageOffsets[obj.art].x
+			offsetY = frame.h - imageOffsets[obj.art].y
+			heart.ctx.drawImage(images[obj.art].img,
+				frame.x, 0, frame.w, frame.h,
+				scr.x - offsetX - cameraX,
+				scr.y - offsetY - cameraY,
+				frame.w, frame.h
+			)
+		}
+		else
+			heart.graphics.draw(images[obj.art], scr.x - offsetX - cameraX, scr.y - offsetY - cameraY)
 
 		if(obj.position.x == mouseHex.x && obj.position.y == mouseHex.y)
-			heart.graphics.print("tile: " + obj.art + " offset: " + offsetX + ", " + offsetY, 5, 30)
+			heart.graphics.print("tile: " + obj.art + " offset: " + offsetX + ", " + offsetY + ", orientation: " + obj.orientation, 5, 30)
 	}
 
 
@@ -246,8 +297,8 @@ heart.draw = function() {
 	heart.graphics.print("tile: " + tileImg, 5, 60)
 
 	var scr = tileToScreen(mouseTile.x, mouseTile.y)
-	heart.graphics.print("X", scr.x - 3 - cameraX, scr.y - 3 - cameraY)
-	heart.graphics.print("scr: " + scr.x + ", " + scr.y, scr.x - 3 - cameraX, scr.y - 10 - cameraY)
+	//heart.graphics.print("X", scr.x - 3 - cameraX, scr.y - 3 - cameraY)
+	//heart.graphics.print("scr: " + scr.x + ", " + scr.y, scr.x - 3 - cameraX, scr.y - 10 - cameraY)
 
 	heart.graphics.print("mh: " + mouseHex.x + "," + mouseHex.y, 5, 15)
 	heart.graphics.print("mt: " + mouseTile.x + "," + mouseTile.y, 100, 15)
