--- a/visualize.html
+++ b/visualize.html
@@ -6,6 +6,7 @@
 <script>
 var MAP_NAME = "SFChina"
 var floorMap = null
+var roofMap = null
 var gObjects = []
 var size = 6
 var tile_width = 80
@@ -17,6 +18,10 @@ var cameraY = 1365//1200
 var showHexOverlay = false
 var SCREEN_WIDTH = 800, SCREEN_HEIGHT = 600
 var currentElevation = 0
+
+var showFloor = true
+var showRoof = true
+var showObjects = true
 
 function tileToScreen(x, y) {
 	x = 99 - x // this algorithm expects x to be reversed
@@ -142,6 +147,7 @@ var cursor = {x: 10, y: 10}
 function changeElevation(level) {
 	currentElevation = level
 	floorMap = gMap[level]["tiles"]["floor"]
+	roofMap  = gMap[level]["tiles"]["roof"]
 	gObjects = gMap[level]["objects"]
 }
 
@@ -188,6 +194,28 @@ heart.keydown = function(k) {
 	if(k == 'up') cameraY -= 15
 	if(k == 'q') { if(currentElevation-1 >= 0) changeElevation(currentElevation-1) }
 	if(k == 'e') { if(currentElevation+1 < gMap.length) changeElevation(currentElevation+1) }
+	if(k == 'r') { showRoof = !showRoof }
+	if(k == 'f') { showFloor = !showFloor }
+	if(k == 'o') { showObjects = !showObjects }
+}
+
+function drawTileMap(matrix, offsetY) {
+	for(var i = 0; i < matrix.length; i++) {
+		for(var j = 0; j < matrix[0].length; j++) {
+			var tile = matrix[j][i]
+			if(tile === "grid000") continue;
+			var img = "art/tiles/" + tile
+
+			if(images[img] !== undefined) {
+				var scr = tileToScreen(i, j)
+				scr.y += offsetY
+				if(scr.x+tile_width < cameraX || scr.y+tile_height < cameraY ||
+				   scr.x >= cameraX+SCREEN_WIDTH || scr.y >= cameraY+SCREEN_HEIGHT)
+					continue;
+				heart.graphics.draw(images[img], scr.x - cameraX, scr.y - cameraY)
+			}
+		}
+	}
 }
 
 heart.draw = function() {
@@ -197,24 +225,9 @@ heart.draw = function() {
 	var mouseHex = hexFromScreen(mousePos[0] + cameraX, mousePos[1] + cameraY)
 	var mouseTile = tileFromScreen(mousePos[0] + cameraX, mousePos[1] + cameraY)
 
-	// draw tile grid
-	if(floorMap === null) return;
-	for(var i = 0; i < floorMap.length; i++) {
-		for(var j = 0; j < floorMap[0].length; j++) {
-			var tile = floorMap[j][i]
-			var x = i
-			var y = j
-			var img = "art/tiles/" + tile
-
-			if(images[img] !== undefined) {
-				var scr = tileToScreen(x, y)
-				if(scr.x+tile_width < cameraX || scr.y+tile_height < cameraY ||
-				   scr.x >= cameraX+SCREEN_WIDTH || scr.y >= cameraY+SCREEN_HEIGHT)
-					continue;
-				heart.graphics.draw(images[img], scr.x - cameraX, scr.y - cameraY)
-			}
-		}
-	}
+	// draw tile grids
+	if(showFloor && floorMap !== null)
+		drawTileMap(floorMap, 0);
 
 	// draw hex grid overlay
 	if(showHexOverlay) {
@@ -233,46 +246,52 @@ heart.draw = function() {
 	}
 
 	// draw objects
-	for(var i = 0; i < gObjects.length; i++) {
-		var obj = gObjects[i]
-		var scr = hexToScreen(obj.position.x, obj.position.y)
+	if(showObjects) {
+		for(var i = 0; i < gObjects.length; i++) {
+			var obj = gObjects[i]
+			var scr = hexToScreen(obj.position.x, obj.position.y)
 
-		if(images[obj.art] === undefined)
-			continue; // skip images we don't have
+			if(images[obj.art] === undefined)
+				continue; // skip images we don't have
 
-		var frameInfo = imageOffsets[obj.art].frameInfo
-		if(frameInfo !== undefined) {
-			var frame = frameInfo[obj.orientation * imageOffsets[obj.art].framesPerDirection]
-			var offsetX = Math.floor(frame.w / 2) - imageOffsets[obj.art].x
-			var offsetY = frame.h - imageOffsets[obj.art].y
-			var scrX = scr.x - offsetX, scrY = scr.y - offsetY
+			var frameInfo = imageOffsets[obj.art].frameInfo
+			if(frameInfo !== undefined) {
+				var frame = frameInfo[obj.orientation * imageOffsets[obj.art].framesPerDirection]
+				var offsetX = Math.floor(frame.w / 2) - imageOffsets[obj.art].x
+				var offsetY = frame.h - imageOffsets[obj.art].y
+				var scrX = scr.x - offsetX, scrY = scr.y - offsetY
 
-			if(scrX + frame.w < cameraX || scrY + frame.h < cameraY ||
-			   scrX >= cameraX+SCREEN_WIDTH || scrY >= cameraY+SCREEN_HEIGHT)
-				continue;
+				if(scrX + frame.w < cameraX || scrY + frame.h < cameraY ||
+				   scrX >= cameraX+SCREEN_WIDTH || scrY >= cameraY+SCREEN_HEIGHT)
+					continue;
 
-			heart.ctx.drawImage(images[obj.art].img,
-				frame.x, 0, frame.w, frame.h,
-				scrX - cameraX,
-				scrY - cameraY,
-				frame.w, frame.h
-			)
+				heart.ctx.drawImage(images[obj.art].img,
+					frame.x, 0, frame.w, frame.h,
+					scrX - cameraX,
+					scrY - cameraY,
+					frame.w, frame.h
+				)
+			}
+			else {
+				var w = images[obj.art].getWidth()
+				var h = images[obj.art].getHeight()
+				var offsetX = Math.floor(w / 2) - imageOffsets[obj.art].x
+				var offsetY = h - imageOffsets[obj.art].y
+				var scrX = scr.x - offsetX, scrY = scr.y - offsetY
+				if(scrX + w < cameraX || scrY + h < cameraY ||
+				   scrX >= cameraX+SCREEN_WIDTH || scrY >= cameraY+SCREEN_HEIGHT)
+					continue
+				heart.graphics.draw(images[obj.art], scrX - cameraX, scrY - cameraY)
+			}
+
+			if(obj.position.x === mouseHex.x && obj.position.y === mouseHex.y)
+				heart.graphics.print("tile: " + obj.art + " offset: " + offsetX + ", " + offsetY + ", orientation: " + obj.orientation, 5, 30)
 		}
-		else {
-			var w = images[obj.art].getWidth()
-			var h = images[obj.art].getHeight()
-			var offsetX = Math.floor(w / 2) - imageOffsets[obj.art].x
-			var offsetY = h - imageOffsets[obj.art].y
-			var scrX = scr.x - offsetX, scrY = scr.y - offsetY
-			if(scrX + w < cameraX || scrY + h < cameraY ||
-			   scrX >= cameraX+SCREEN_WIDTH || scrY >= cameraY+SCREEN_HEIGHT)
-				continue
-			heart.graphics.draw(images[obj.art], scrX - cameraX, scrY - cameraY)
-		}
-
-		if(obj.position.x == mouseHex.x && obj.position.y == mouseHex.y)
-			heart.graphics.print("tile: " + obj.art + " offset: " + offsetX + ", " + offsetY + ", orientation: " + obj.orientation, 5, 30)
 	}
+
+	if(showRoof && roofMap !== null)
+		drawTileMap(roofMap, -96);
+
 
 	var tileImg = floorMap[mouseTile.y][mouseTile.x]
 	heart.graphics.print("tile: " + tileImg, 5, 60)
